# openstargazer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDBOOK.md  HANDBUCH.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: openstargazer.desktop  openstargazer.service
gui/: app.py  calibration_window.py  curves_editor.py  main_window.py  profiles.py  tray.py
gui/preview/: index.html
openstargazer/config/: profile.py  settings.py
openstargazer/daemon/: calibration.py  ipc_server.py  main.py  pipeline.py  tracker.py
openstargazer/engine/: api.py  callbacks.py  loader.py
openstargazer/filters/: deadzone.py  one_euro.py
openstargazer/ipc/: client.py
openstargazer/output/: base.py  freetrack_shm.py  opentrack_udp.py
openstargazer/setup/: lug_detector.py  opentrack_config.py  wizard.py
scripts/: collect-debug-info.sh  fetch-stream-engine.sh  install.sh
tests/: test_config.py  test_deadzone.py  test_lug_detector.py  test_mock_tracker.py  test_one_euro.py  test_opentrack_udp.py  test_pipeline.py
udev/: 70-openstargazer.rules
